--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "baseHref": "/",
+            "baseHref": "/inbox/",
             "outputPath": "dist/moon-mail",
             "index": "src/index.html",
             "browser": "src/main.ts",
